. [NEW] GLProgram: Added uniformLocationForName: method
. [NEW] NodeRGBA: New node that implements opacity and color. Sprite, Label, Menu and other are subclasses of this one.
		It also supports cascading color and opacity (disabled by default in v2.1)
. [NEW] OpenGL: CC_ENABLE_GL_STATE_CACHE is enabled by default. If you are migrating from v1.x, then turn it off to easy the transition
. [FIX] Actions, Animations, Camera, Director, Menu, Node, Particles, Parallax, Sprite, SpriteBatch, Texture, TextureAtlas, Transitions: All ivars use _ as prefix, not as suffix
. [FIX] Configuration: Can be initialized before an OpenGL context is created (issue #1450)
. [FIX] Director: replaced length with lenght
		Fixed 2 memory leaks in createStatsLabel
		Frees DrawingPrimitives resources (issue #1456)
		The 1st dt after startAnimation will be 0 (issue #1435)
. [FIX] EaseActions: "other_" ivar renamed to "_inner". It is a property now
. [FIX] Effects: ccGridSize is no longer used. It was replaced by CGPoint and CGSize
		API fixes: The first parameters that is received is the duration of the action. This is consistent with the actions API.
		API fixes: parameter "grid" was renamed to "size"
. [FIX] externals: All JS related projects are in the externals/JavaScript subfolder
. [FIX] FileUtils: Suffixes for iPhone5 are: "-iphone5" and "-iphone5hd", and not "-wide" and "-widehd"
. [FIX] Layer: _touchPriority is an NSInteger, not a BOOL (issue #1449)
. [FIX] MenuItem: "releaseBlockAtCleanup" enabled by default. Rolls back behavior from v2.1-beta4
. [FIX] RenderTexture: Restures the Projection after using it.
. [FIX] Particles: Adding or removing particles in runtime from an emitter works as expected
. [3RD] CCBReader: is a submodule in github. Using lastest stable version
. [3RD] JRSwizzle: is a submodule
. [3RD] JS Bindings: Updated to v0.5
. [3RD] SpiderMonkey: Updated to v18.0

version 2.1-beta4  4-Dec-2012
. [NEW] FileUtils: Supports iPhone5 resources (-wide, -widehd)