@@ -2011,6 +2011,8 @@
 		A09DB74B1640AA7600AFCA61 /* ApplicationServices.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = E01E6A3D121EDCD3001A484F /* ApplicationServices.framework */; };
 		A09DB74C1640AA7600AFCA61 /* libz.dylib in Frameworks */ = {isa = PBXBuildFile; fileRef = E0F9256D1224207200EF2362 /* libz.dylib */; };
 		A0A1C1E015CAE55B0058D96F /* icon.icns in Resources */ = {isa = PBXBuildFile; fileRef = E02A8537129F11BF00341C97 /* icon.icns */; };
+		A0A6AD0916A7900000D9743D /* grossinis_sister1-testalpha_nopremult.pvr in Resources */ = {isa = PBXBuildFile; fileRef = A0A6AD0716A7900000D9743D /* grossinis_sister1-testalpha_nopremult.pvr */; };
+		A0A6AD0A16A7900000D9743D /* grossinis_sister1-testalpha_premult.pvr in Resources */ = {isa = PBXBuildFile; fileRef = A0A6AD0816A7900000D9743D /* grossinis_sister1-testalpha_premult.pvr */; };
 		A0AA8555159D789E00E77CC9 /* futura-48.fnt in Resources */ = {isa = PBXBuildFile; fileRef = E0796B5612DF8A8C002442F5 /* futura-48.fnt */; };
 		A0AA8556159D789E00E77CC9 /* futura-48.png in Resources */ = {isa = PBXBuildFile; fileRef = E0796B5712DF8A8C002442F5 /* futura-48.png */; };
 		A0AA8559159E157000E77CC9 /* Official-cocos2d-Icon-Angry.png in Resources */ = {isa = PBXBuildFile; fileRef = E076E7971225EDD000DE0DA2 /* Official-cocos2d-Icon-Angry.png */; };
@@ -5709,6 +5711,8 @@
 		A09C8D3E1566FB4100ADFDA9 /* JS Tests.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = "JS Tests.app"; sourceTree = BUILT_PRODUCTS_DIR; };
 		A09DB7521640AA7600AFCA61 /* JS CocosDragon.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = "JS CocosDragon.app"; sourceTree = BUILT_PRODUCTS_DIR; };
 		A0A42B19166D9C8900078217 /* res */ = {isa = PBXFileReference; lastKnownFileType = folder; path = res; sourceTree = "<group>"; };
+		A0A6AD0716A7900000D9743D /* grossinis_sister1-testalpha_nopremult.pvr */ = {isa = PBXFileReference; lastKnownFileType = file; path = "grossinis_sister1-testalpha_nopremult.pvr"; sourceTree = "<group>"; };
+		A0A6AD0816A7900000D9743D /* grossinis_sister1-testalpha_premult.pvr */ = {isa = PBXFileReference; lastKnownFileType = file; path = "grossinis_sister1-testalpha_premult.pvr"; sourceTree = "<group>"; };
 		A0ADF04414584BD3009A71F1 /* ShaderTest.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = ShaderTest.app; sourceTree = BUILT_PRODUCTS_DIR; };
 		A0ADF04814584C9B009A71F1 /* ShaderTest.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = ShaderTest.h; path = tests/ShaderTest.h; sourceTree = "<group>"; };
 		A0ADF04914584C9B009A71F1 /* ShaderTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = ShaderTest.m; path = tests/ShaderTest.m; sourceTree = "<group>"; };
@@ -7155,6 +7159,8 @@
 		E076E7B71225EDD000DE0DA2 /* Images */ = {
 			isa = PBXGroup;
 			children = (
+				A0A6AD0716A7900000D9743D /* grossinis_sister1-testalpha_nopremult.pvr */,
+				A0A6AD0816A7900000D9743D /* grossinis_sister1-testalpha_premult.pvr */,
 				A014BDF615D0DCB7009479BB /* test_image_a8_v3.pvr */,
 				A014BDF715D0DCB7009479BB /* test_image_ai88_v3.pvr */,
 				A014BDF815D0DCB7009479BB /* test_image_bgra8888_v3.pvr */,
@@ -11330,6 +11336,8 @@
 				A014BE0F15D0DCB7009479BB /* test_image_rgba5551_v3.pvr in Resources */,
 				A014BE1015D0DCB7009479BB /* test_image_rgba8888_v3.pvr in Resources */,
 				A014BE1115D0DCB7009479BB /* test_image-bad_encoding.pvr in Resources */,
+				A0A6AD0916A7900000D9743D /* grossinis_sister1-testalpha_nopremult.pvr in Resources */,
+				A0A6AD0A16A7900000D9743D /* grossinis_sister1-testalpha_premult.pvr in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
